force-app/main/default/objects/Application_Domain_Relationship__c/Application_Domain_Relationship__c.object-meta.xml
<CustomObject>
    <description>HRC APM - relationship between an application and domains</description>
    <label>Application Domain Relationship</label>
    <nameField>
        <displayFormat>ADR-{00000}</displayFormat>
        <label>Application Domain Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Domain Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>