force-app/main/default/objects/Application_Domain_Relationship__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Domain</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Hill_Rom_Application_Domain__c.Type__c</field>
            <operation>equals</operation>
            <value>Domain</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Hill_Rom_Application_Domain__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Application_Domain_Relationships</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>