force-app/main/default/objects/Application_Domain_Relationship__c/fields/Hill_Rom_Application__c.field-meta.xml
<CustomField>
    <fullName>Hill_Rom_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hill-Rom Application</label>
    <referenceTo>Hill_Rom_Application__c</referenceTo>
    <relationshipLabel>Domains</relationshipLabel>
    <relationshipName>Application_Domain_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>