force-app/main/default/objects/Application_Domain_Relationship__c/fields/Subdomain__c.field-meta.xml
<CustomField>
    <fullName>Subdomain__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subdomain</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Hill_Rom_Application_Domain__c.Type__c</field>
            <operation>equals</operation>
            <value>Subdomain</value>
        </filterItems>
        <filterItems>
            <field>$Source.Domain__c</field>
            <operation>equals</operation>
            <valueField>Hill_Rom_Application_Domain__c.Parent_Domain__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Hill_Rom_Application_Domain__c</referenceTo>
    <relationshipLabel>Application Domain Relationships (Subdomain)</relationshipLabel>
    <relationshipName>Application_Domain_Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>