force-app/main/default/objects/Application_Domain_Relationship__c/validationRules/only_allow_relationships_with_subdomain.validationRule-meta.xml
<ValidationRule>
    <fullName>only_allow_relationships_with_subdomain</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Subdomain__c)</errorConditionFormula>
    <errorMessage>Subdomain required to save a new relationship record.</errorMessage>
</ValidationRule>